--- a/wk0/notebooks/challenges/pins/pins_challenge.ipynb
+++ b/wk0/notebooks/challenges/pins/pins_challenge.ipynb
@@ -108,8 +108,37 @@
     "VOWELS = \"aeiou\"  \n",
     "\n",
     "def convert_pin(pin):\n",
-    "    ##FIXME: Replace the rest with your code\n",
-    "    pass"
+    "    pin1 = pin.pop()\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "\n",
+    "pin1 = pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pin = '2363'\n",
+    "pin1 = list(pin)\n",
+    "def remove_end(g):\n",
+    "    "
    ]
   },
   {
@@ -198,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
