--- a/wk0/notebooks/challenges/primes/primes_challenge.ipynb
+++ b/wk0/notebooks/challenges/primes/primes_challenge.ipynb
@@ -73,32 +73,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<ipython-input-30-62e3d9999bcd>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-30-62e3d9999bcd>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    if n%2 == 0:\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[2,\n",
+       " 3,\n",
+       " 5,\n",
+       " 7,\n",
+       " 11,\n",
+       " 13,\n",
+       " 17,\n",
+       " 19,\n",
+       " 23,\n",
+       " 29,\n",
+       " 31,\n",
+       " 37,\n",
+       " 41,\n",
+       " 43,\n",
+       " 47,\n",
+       " 53,\n",
+       " 59,\n",
+       " 61,\n",
+       " 67,\n",
+       " 71,\n",
+       " 73,\n",
+       " 79,\n",
+       " 83,\n",
+       " 89,\n",
+       " 97,\n",
+       " 101,\n",
+       " 103,\n",
+       " 107,\n",
+       " 109,\n",
+       " 113,\n",
+       " 127,\n",
+       " 131,\n",
+       " 137,\n",
+       " 139,\n",
+       " 149,\n",
+       " 151,\n",
+       " 157,\n",
+       " 163,\n",
+       " 167,\n",
+       " 173,\n",
+       " 179,\n",
+       " 181,\n",
+       " 191,\n",
+       " 193,\n",
+       " 197,\n",
+       " 199,\n",
+       " 211,\n",
+       " 223,\n",
+       " 227,\n",
+       " 229,\n",
+       " 233,\n",
+       " 239,\n",
+       " 241,\n",
+       " 251,\n",
+       " 257,\n",
+       " 263,\n",
+       " 269,\n",
+       " 271,\n",
+       " 277,\n",
+       " 281,\n",
+       " 283,\n",
+       " 293]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def list_primes(n):\n",
-    "       for n in range(0,n):\n",
-    "            n+=1\n",
-    "            if n%2 == 0:\n",
+    "    lst = []\n",
+    "    for p in range(2,n+1):\n",
+    "        for number in range (2,p):\n",
+    "            if p % number == 0:\n",
     "                break\n",
-    "            else:\n",
-    "                return n\n",
-    "                \n",
-    "                \n",
-    "list_primes(3)"
+    "        else:\n",
+    "                lst.append(p)\n",
+    "            \n",
+    "    return lst\n",
+    "list_primes(300)\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 2\n",
+      "4 2\n",
+      "4 3\n",
+      "5 2\n",
+      "5 3\n",
+      "5 4\n",
+      "6 2\n",
+      "6 3\n",
+      "6 4\n",
+      "6 5\n",
+      "7 2\n",
+      "7 3\n",
+      "7 4\n",
+      "7 5\n",
+      "7 6\n",
+      "8 2\n",
+      "8 3\n",
+      "8 4\n",
+      "8 5\n",
+      "8 6\n",
+      "8 7\n",
+      "9 2\n",
+      "9 3\n",
+      "9 4\n",
+      "9 5\n",
+      "9 6\n",
+      "9 7\n",
+      "9 8\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_primes(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
